--- a/package.json
+++ b/package.json
@@ -49,12 +49,16 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^9.0.0",
     "@loopback/boot": "^5.0.0",
     "@loopback/core": "^4.0.0",
     "@loopback/repository": "^5.0.0",
     "@loopback/rest": "^12.0.0",
     "@loopback/rest-explorer": "^5.0.0",
+    "@loopback/security": "^0.8.0",
     "@loopback/service-proxy": "^5.0.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
     "loopback-connector-mysql": "^5.4.4",
     "tslib": "^2.0.0"
   },
@@ -62,6 +66,7 @@
     "@loopback/build": "^9.0.0",
     "@loopback/eslint-config": "^13.0.0",
     "@loopback/testlab": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^12.20.50",
     "eslint": "^8.14.0",
     "source-map-support": "^0.5.21",
