--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@loopback/security": "^0.8.0",
     "@loopback/service-proxy": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "loopback-connector-mysql": "^5.4.4",
     "tslib": "^2.0.0"
