Updated the primary key data type  - change the type from string to int  - updated the data source to get value from env

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ HOST="http://localhost:4000"
 #Database
 DB_HOST=""
 DB_PORT=""
-DB_PASSWORD=""
+DB_PSWD=""
 DB_USER=""
 DB_NAME=""
 dB_CONNECTOR="mysql"
